# vspcomp

./: .gitignore  CMakeLists.txt  README.md
cfg/: targets.h
include/: IncPath.hpp  ProjectDataExtractor.hpp  Targets.hpp  VSProjectData.hpp  utility.hpp
src/: IncPath.cpp  ProjectDataExtractor.cpp  VSProjectData.cpp  utility.cpp
